k8s/redis.yaml
# k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache-service
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache-service
  template:
    metadata:
      labels:
        app: cache-service
    spec:
      containers:
        - name: cache-service
          image: redis
          ports:
            - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: cache-service
  namespace: ecommerce
spec:
  selector:
    app: cache-service
  ports:
    - port: 6379
      targetPort: 6379
